Tidy up some codes, added try except around plate assign to variable

--- a/db.ini
+++ b/db.ini
@@ -1,4 +1,4 @@
-ip=192.168.137.1
-username=parking
-password=parkey123
-database=parkey
+ip=192.168.1.66
+username=parkey
+password=parking123
+database=parking
